--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --json --outputFile=src/__test__/output.json",
-    "test:dev": "npm run test --watch",
+    "test:dev": "npm run test --watch --detectOpenHandles",
     "clean": "rm -rf build/",
     "clean:windows": "rmdir build /s /q",
     "build:dev": "tsc -w",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/node": "^16.3.2",
     "dotenv": "^10.0.0",
+    "elastic-apm-node": "^3.17.0",
     "fastify": "^3.19.1",
     "fastify-autoload": "^3.8.0",
     "fastify-blipp": "^3.1.0",
@@ -31,7 +32,14 @@
     "pino-pretty": "^5.1.1",
     "sequelize": "^6.6.5",
     "tedious": "^11.2.0",
+    "toad-scheduler": "^1.5.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
+    "sequelize-mock": "^0.10.2",
+    "ts-jest": "^27.0.3"
   }
 }
